# school-cs233

./: .clang-format  .gitignore  .gitmodules
01a - BST Lab/BSTStartLab/: BSTStartProject.sln
01a - BST Lab/BSTStartLab/BSTStartProject/: BSTInterface.h  ComputerScientist.cpp  ComputerScientist.h
01a - BST Lab/completed/: cmake
01a - BST Lab/completed/app/: BSTStartProject.cpp  CMakeLists.txt  csList.txt
01a - BST Lab/completed/include/: BSTree.h
Lab 01 and 02 - Binary Search Tree/BSTStartLab/: README
Lab 01 and 02 - Binary Search Tree/BSTStartLab/BSTStartProject/: BSTStartProject.cpp  BSTStartProject.vcxproj  BSTStartProject.vcxproj.filters  BSTree.h  stdafx.cpp
Lab 01 and 02 - Binary Search Tree/completed/app/: BSTStartProject.cpp  csListMed.txt  csListSmall.txt
Lab 01 and 02 - Binary Search Tree/completed/include/: BSTInterface.h  BSTree.h
Lab 01 and 02 - Binary Search Tree/completed/src/: CMakeLists.txt  ComputerScientist.cpp
Lab 05 and 06 - Priority Queue/: CMakeLists.txt
Lab 05 and 06 - Priority Queue/app/: CMakeLists.txt  Driver.cpp  ProcessList.txt
Lab 05 and 06 - Priority Queue/include/: PriorityQueue.h  Process.h  QueueADT.h
Lab 05 and 06 - Priority Queue/src/: CMakeLists.txt  Process.cpp
Lab 05 and 06 - Priority Queue/tests/: CMakeLists.txt  PriorityQueue_test.cpp  TestPQueueWithComparisonMethod.cpp
Program 01 - Binary Search Tree with Array/: CMakeLists.txt
Program 01 - Binary Search Tree with Array/BSTStartHomework/: BSTStartProject.sln
Program 01 - Binary Search Tree with Array/BSTStartHomework/BSTStartProject/: BSTInterface.h  BSTStartProject.cpp  BSTStartProject.vcxproj  BSTStartProject.vcxproj.filters  BSTree.h  ComputerScientist.cpp  ComputerScientist.h  csList.txt  csListMed.txt  csListSmall.txt
Program 01 - Binary Search Tree with Array/app/: BSTStartProject.cpp
Program 01 - Binary Search Tree with Array/include/: BSTInterface.h  BSTree.h  ComputerScientist.h
Program 01 - Binary Search Tree with Array/src/: ComputerScientist.cpp
Program 01 - Binary Search Tree with Array/tests/: BSTree_test.cpp  CMakeLists.txt
Program 02 - Huffman Coding/: CMakeLists.txt  HG Wells TimeMachine.txt  HuffmanBookText.txt  HuffmanCoding.cpp  HuffmanTree.cpp  HuffmanTree.h  HuffmanTreeInterface.h  cmake
Program 02 - Huffman Coding/app/: 20000leagues.txt  Bigo.txt  CMakeLists.txt  Error Code.txt  Guliver's Travels.txt  HuffmanCoding.cpp
Program 02 - Huffman Coding/include/: HuffmanTree.h  HuffmanTreeInterface.h
Program 02 - Huffman Coding/src/: CMakeLists.txt  HuffmanTree.cpp
Program 02 - Huffman Coding/tests/: CMakeLists.txt  HuffmanTree_test.cpp
Program 03 - Skip List/: CMakeLists.txt
Program 03 - Skip List/app/: CMakeLists.txt  SkipListApp.cpp
Program 03 - Skip List/include/: ComputerScientist.h  Node.h  SkipList.h
Program 03 - Skip List/src/: CMakeLists.txt
Program 03 - Skip List/tests/: CMakeLists.txt  SkipList_test.cpp
